--- a/omnicell/notebooks/tranformer/train_llm.ipynb
+++ b/omnicell/notebooks/tranformer/train_llm.ipynb
@@ -2,57 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'datamodules'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscanpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msc\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpytorch_lightning\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m TQDMProgressBar\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatamodules\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  SCFMDataset, cfm_collate, StratifiedBatchSampler, ot_collate\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m RandomSampler\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msc_etl_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'datamodules'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import math\n",
-    "from tqdm import tqdm\n",
-    "import scvi\n",
     "import torch\n",
     "import numpy as np\n",
-    "import pytorch_lightning as pl\n",
-    "import os\n",
-    "\n",
+    "from tqdm import tqdm   \n",
     "import scanpy as sc\n",
-    "\n",
-    "from pytorch_lightning.callbacks import TQDMProgressBar\n",
-    "from datamodules import  SCFMDataset, cfm_collate, StratifiedBatchSampler, ot_collate\n",
-    "from torch.utils.data import RandomSampler\n",
-    "from sc_etl_utils import *\n",
-    "from arch import *\n",
-    "from flow_utils import compute_conditional_flow\n",
-    "import json\n",
-    "\n",
-    "import scvi\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "import pytorch_lightning as pl\n",
-    "import os\n",
-    "\n",
-    "import scanpy as sc\n",
-    "\n",
-    "from torchcfm.conditional_flow_matching import *\n",
-    "import scanpy as sc\n",
-    "import hashlib\n",
-    "from llm import MAE"
+    "from tqdm import tqdm \n",
+    "from notebooks.tranformer.llm import Transformer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,68 +26,467 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "744"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gene_map = {k: i for i, k in enumerate(adata.var.index)}\n",
-    "gene_map = gene_map | {'NT': max(gene_map.values()) + 1}\n",
-    "gene_unmap = {gene_map[k]: k for k in gene_map}\n",
-    "perts = adata.obs.gene.unique().map(gene_map)\n",
-    "adata.obs['pert_type'] = adata.obs.gene.map(gene_map)\n",
-    "pert_ids = np.array(adata.obs['pert_type'])\n",
-    "pert_mat = np.arange(pert_ids.max() + 1)[:, None]"
+    "observation_groups = adata.obs.groupby(['gene', 'cell_type','Batch_info'])\n",
+    "\n",
+    "adata.obs['group_id'] = observation_groups.ngroup()\n",
+    "\n",
+    "len(adata.obs['group_id'].unique())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3it [00:01,  2.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 600/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "39it [00:14,  2.97it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 300/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "49it [00:17,  3.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 0/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "103it [00:37,  2.78it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 50/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "104it [00:37,  2.82it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 650/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "112it [00:40,  2.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 350/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "140it [00:51,  2.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 400/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "160it [00:59,  2.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 100/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "178it [01:05,  2.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 700/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "244it [01:30,  2.69it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 450/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "245it [01:30,  2.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 150/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "262it [01:36,  2.76it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 500/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "300it [01:50,  2.72it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 200/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "331it [02:01,  2.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 550/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "369it [02:15,  2.98it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing group 250/744\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "744it [04:35,  2.70it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "cell_col = 'cell_type'\n",
-    "pert_col = 'pert_type'\n",
-    "control_pert, holdout_cells, holdout_perts = gene_map['NT'], ['HT29'], [gene_map['USP18']]"
+    "\n",
+    "\n",
+    "group_features = {}\n",
+    "\n",
+    "\n",
+    "for group_id in (pbar := tqdm(iter(adata.obs['group_id'].unique()))):\n",
+    "    if(group_id % 50 == 0):\n",
+    "        print(f\"Processing group {group_id}/{len(adata.obs['group_id'].unique())}\")\n",
+    "\n",
+    "    total_counts = torch.from_numpy(adata[adata.obs['group_id'] == group_id].X.toarray().sum(axis=0)).type(torch.float32)\n",
+    "\n",
+    "    #Pblm: Variance is computed on all entries not just non negative ones\n",
+    "    variance = torch.from_numpy(adata[adata.obs['group_id'] == group_id].X.toarray().var(axis=0)).type(torch.float32)\n",
+    "\n",
+    "    group_size = len(adata[adata.obs['group_id'] == group_id])\n",
+    "\n",
+    "    group_size = torch.fill(total_counts.clone(), group_size)\n",
+    "\n",
+    "    #We don't put group id, how would we define the group id with new data? \n",
+    "\n",
+    "    triplet =  torch.stack([total_counts, variance, group_size])\n",
+    "\n",
+    "    group_features[group_id] = triplet.T\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2054, 3])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "group_features[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([328542, 2054, 4])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "zeroes = torch.zeros(*adata.shape, group_features[0].shape[-1])\n",
+    "\n",
+    "\n",
+    "expanded_X = torch.from_numpy(adata.X.toarray()).reshape(adata.shape[0], adata.shape[1], 1)\n",
+    "\n",
+    "expanded_X = torch.cat([expanded_X, zeroes], dim=2)\n",
+    "\n",
+    "expanded_X.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([328542])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = torch.from_numpy((adata.obs['group_id'] == group_id).array.to_numpy())\n",
+    "mask.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Controls: 14582, Perturbations: 313080,  Eval: 880\n"
+      "Processing group 0/744\n",
+      "Processing group 50/744\n",
+      "Processing group 100/744\n",
+      "Processing group 150/744\n",
+      "Processing group 200/744\n",
+      "Processing group 250/744\n",
+      "Processing group 300/744\n",
+      "Processing group 350/744\n",
+      "Processing group 400/744\n",
+      "Processing group 450/744\n",
+      "Processing group 500/744\n",
+      "Processing group 550/744\n",
+      "Processing group 600/744\n",
+      "Processing group 650/744\n",
+      "Processing group 700/744\n"
      ]
     }
    ],
    "source": [
-    "from sc_etl_utils import *\n",
-    "control_idx, pert_idx, eval_idx, eval_cell_idx, eval_pert_idx = get_train_eval_idxs(\n",
-    "    adata, control_pert, holdout_cells, holdout_perts, cell_col=cell_col, pert_col=pert_col\n",
-    ")\n",
     "\n",
-    "_, _, cell_types = get_identity_features(\n",
-    "    adata, cell_col=cell_col, pert_col=pert_col, cell_type_features=False\n",
-    ")\n",
+    "for i, group_id in enumerate(adata.obs['group_id'].unique()):\n",
+    "    if i % 50 == 0:\n",
+    "        print(f\"Processing group {i}/{len(adata.obs['group_id'].unique())}\")\n",
     "\n",
-    "adata.obsm[\"standard\"] = adata.X\n",
-    "X = adata.obsm[\"standard\"]\n",
-    "X = X.toarray()\n",
-    "X = X / X.sum(axis=1)[:, None]\n",
-    "\n",
-    "control_train, pert_train, pert_ids_train, control_cell_types, pert_cell_types, control_eval, pert_eval, pert_ids_eval = get_train_eval(\n",
-    "    X, pert_ids, cell_types, control_idx, pert_idx, eval_idx, eval_cell_idx, eval_pert_idx\n",
-    ")\n"
+    "    mask = torch.from_numpy((adata.obs['group_id'] == group_id).array.to_numpy())\n",
+    "    expanded_X[mask, :, 1:] = group_features[group_id]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_function(output, target):\n",
+    "\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'input_dim' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mTransformer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnbr_genes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexpanded_X\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/orcd/archive/abugoot/001/Projects/opitcho/sandbox/omnicell/notebooks/tranformer/llm.py:74\u001b[0m, in \u001b[0;36mTransformer.__init__\u001b[0;34m(self, nbr_genes, ff_dim, emb_dim, nlayer, nheads)\u001b[0m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnbr_genes \u001b[38;5;241m=\u001b[39m nbr_genes\n\u001b[0;32m---> 74\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39minput_dim \u001b[38;5;241m=\u001b[39m \u001b[43minput_dim\u001b[49m\n\u001b[1;32m     75\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39memb_dim \u001b[38;5;241m=\u001b[39m emb_dim\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpos_embedding \u001b[38;5;241m=\u001b[39m PosEmbedding(nbr_genes, emb_dim)\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'input_dim' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "model = Transformer(nbr_genes=expanded_X.shape[1])\n",
+    "\n",
+    "NUMBER_OF_EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "#The threshold could be adaptive based on the number of cells in this group\n",
+    "MIN_EXPRESSION = \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for e in NUMBER_OF_EPOCHS:\n",
+    "\n",
+    "    shuffled_indices = np.random.permutation(expanded_X.shape[0])\n",
+    "\n",
+    "    for i in range(0, len(shuffled_indices), BATCH_SIZE):\n",
+    "        batch_idx = shuffled_indices[i:i+BATCH_SIZE]\n",
+    "\n",
+    "        batch = expanded_X[batch_idx]\n",
+    "        target = expanded_X[batch_indices]\n",
+    "\n",
+    "        output = model(batch)\n",
+    "\n",
+    "        loss = loss_function(output, target)\n",
+    "\n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        optimizer.zero_grad()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -195,25 +558,12 @@
     }
    ],
    "source": [
-    "batch_size = 512\n",
-    "dset = SCFMDataset(\n",
-    "    control_train, pert_train, \n",
-    "    pert_ids_train, pert_mat, \n",
-    "    control_cell_types, pert_cell_types,\n",
-    "    batch_size=batch_size, size=X.shape[0]\n",
-    ")\n",
-    "ns = np.array([[t.shape[0] for t in ts] for ts in dset.target])\n",
-    "dl = torch.utils.data.DataLoader(\n",
-    "    dset, collate_fn=ot_collate, \n",
-    "    batch_sampler=StratifiedBatchSampler(\n",
-    "        ns=ns, batch_size=512\n",
-    "    )\n",
-    ")"
+    "batch_size = 512\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -694,6 +1044,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
