--- a/cfm/train_llm_v3.ipynb
+++ b/cfm/train_llm_v3.ipynb
@@ -36,6 +36,8 @@
     "import scanpy as sc\n",
     "\n",
     "from pytorch_lightning.callbacks import TQDMProgressBar\n",
+    "from torchcfm.conditional_flow_matching import *\n",
+    "import scanpy as sc\n",
     "from datamodules import  SCFMDataset, cfm_collate, StratifiedBatchSampler, ot_collate\n",
     "from torch.utils.data import RandomSampler\n",
     "from sc_etl_utils import *\n",
