--- a/sbmodels/flow_stretch.ipynb
+++ b/sbmodels/flow_stretch.ipynb
@@ -461,7 +461,21 @@
       "10100: loss 1.729 time 0.02\n",
       "10200: loss 0.206 time 0.02\n",
       "10300: loss 1.529 time 0.02\n",
-      "10400: loss 0.275 time 0.02\n"
+      "10400: loss 0.275 time 0.02\n",
+      "10500: loss 0.380 time 0.02\n",
+      "10600: loss 0.643 time 0.02\n",
+      "10700: loss 2.028 time 0.02\n",
+      "10800: loss 0.643 time 0.02\n",
+      "10900: loss 0.708 time 0.02\n",
+      "11000: loss 0.373 time 0.02\n",
+      "11100: loss 0.275 time 0.02\n",
+      "11200: loss 1.399 time 0.02\n",
+      "11300: loss 0.254 time 0.02\n",
+      "11400: loss 3.134 time 0.02\n",
+      "11500: loss 1.655 time 0.02\n",
+      "11600: loss 0.439 time 0.02\n",
+      "11700: loss 0.493 time 0.02\n",
+      "11800: loss 2.384 time 0.02\n"
      ]
     }
    ],
