updats to flows and data proc

--- a/sbmodels/flow_shift_mult.ipynb
+++ b/sbmodels/flow_shift_mult.ipynb
@@ -329,18 +329,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: loss 6.576 time 0.00\n",
-      "100: loss 1.298 time 0.08\n",
-      "200: loss 1.673 time 0.08\n",
-      "300: loss 0.627 time 0.08\n",
-      "400: loss 2.157 time 0.08\n"
+      "0: loss 0.054 time 0.00\n",
+      "100: loss 0.061 time 0.07\n",
+      "200: loss 0.047 time 0.08\n",
+      "300: loss 0.069 time 0.07\n",
+      "400: loss 0.139 time 0.07\n",
+      "500: loss 0.054 time 0.07\n",
+      "600: loss 0.050 time 0.07\n",
+      "700: loss 0.052 time 0.07\n",
+      "800: loss 0.104 time 0.07\n",
+      "900: loss 0.047 time 0.07\n",
+      "1000: loss 0.061 time 0.07\n",
+      "1100: loss 0.066 time 0.07\n",
+      "1200: loss 0.062 time 0.07\n",
+      "1300: loss 0.067 time 0.07\n",
+      "1400: loss 0.093 time 0.07\n",
+      "1500: loss 0.058 time 0.07\n",
+      "1600: loss 0.085 time 0.07\n",
+      "1700: loss 0.047 time 0.07\n",
+      "1800: loss 0.037 time 0.07\n",
+      "1900: loss 0.064 time 0.07\n",
+      "2000: loss 0.053 time 0.07\n",
+      "2100: loss 0.066 time 0.07\n",
+      "2200: loss 0.080 time 0.07\n",
+      "2300: loss 0.051 time 0.07\n",
+      "2400: loss 0.087 time 0.07\n",
+      "2500: loss 0.064 time 0.07\n",
+      "2600: loss 0.089 time 0.07\n",
+      "2700: loss 0.103 time 0.07\n",
+      "2800: loss 0.052 time 0.07\n",
+      "2900: loss 0.076 time 0.07\n",
+      "3000: loss 0.037 time 0.07\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [19], line 36\u001b[0m\n\u001b[1;32m     34\u001b[0m M \u001b[38;5;241m=\u001b[39m M \u001b[38;5;241m/\u001b[39m M\u001b[38;5;241m.\u001b[39mmax()\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# pi = pot.sinkhorn(a, b, M.detach().cpu().numpy(), reg=0.01)\u001b[39;00m\n\u001b[0;32m---> 36\u001b[0m pi \u001b[38;5;241m=\u001b[39m \u001b[43mpot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43memd\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetach\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0.01\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;66;03m# Sample random interpolations on pi\u001b[39;00m\n\u001b[1;32m     38\u001b[0m p \u001b[38;5;241m=\u001b[39m pi\u001b[38;5;241m.\u001b[39mflatten()\n",
+      "File \u001b[0;32m~/miniforge3/envs/pytorch/lib/python3.8/site-packages/ot/lp/__init__.py:353\u001b[0m, in \u001b[0;36memd\u001b[0;34m(a, b, M, numItermax, log, center_dual, numThreads, check_marginals)\u001b[0m\n\u001b[1;32m    349\u001b[0m bsel \u001b[38;5;241m=\u001b[39m b \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    351\u001b[0m numThreads \u001b[38;5;241m=\u001b[39m check_number_threads(numThreads)\n\u001b[0;32m--> 353\u001b[0m G, cost, u, v, result_code \u001b[38;5;241m=\u001b[39m \u001b[43memd_c\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumItermax\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnumThreads\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    355\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m center_dual:\n\u001b[1;32m    356\u001b[0m     u, v \u001b[38;5;241m=\u001b[39m center_ot_dual(u, v, a, b)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -353,73 +391,50 @@
     "dim = 2\n",
     "rep_dim = 128\n",
     "\n",
-    "model_r = MLP(dim=dim, out_dim=rep_dim, time_varying=False)\n",
-    "model_h = MLP(dim=dim + rep_dim, out_dim=dim, time_varying=True)\n",
+    "# model_r = MLP(dim=dim, out_dim=rep_dim, time_varying=False)\n",
+    "# model_h = MLP(dim=dim + rep_dim, out_dim=dim, time_varying=True)\n",
     "\n",
-    "batch_size = 256\n",
+    "batch_size = 512\n",
     "# Combine the parameters from both models\n",
-    "combined_parameters = itertools.chain(model_h.parameters(), model_r.parameters())\n",
+    "# combined_parameters = itertools.chain(model_h.parameters(), model_r.parameters())\n",
     "\n",
     "# Use the combined parameters in the Adam optimizer\n",
-    "optimizer = torch.optim.Adam(combined_parameters, lr=1e-3)\n",
+    "# optimizer = torch.optim.Adam(combined_parameters, lr=1e-4)\n",
     "\n",
-    "def get_batch():\n",
+    "start = time.time()\n",
+    "for k in range(500_000):\n",
+    "    optimizer.zero_grad()\n",
+    "    t = torch.rand(batch_size, 1)\n",
+    "    \n",
     "    x0 = eight_normal_sample(batch_size, dim, scale=5, var=0.1).float()\n",
     "    x1, _ = generate_moons(batch_size, noise=0.2)\n",
     "    mu = normal_sample(1, dim)\n",
     "    x0 += mu\n",
-    "    x1 += mu\n",
-    "    return x0, x1\n",
+    "    x1 *= mu\n",
+    "    #x1[:, 0] = x1[:, 0] - 0\n",
     "\n",
-    "def collate_and_permute(k=4):\n",
-    "    x0s, x1s = [], []\n",
-    "    for _ in range(k):\n",
-    "        x0, x1 = get_batch()\n",
-    "        x0s.append(x0)\n",
-    "        x1s.append(x1)\n",
+    "    # sample some random times\n",
+    "    a, b = pot.unif(x0.size()[0]), pot.unif(x1.size()[0])\n",
+    "    M = torch.cdist(x0, x1) ** 2\n",
+    "    M = M / M.max()\n",
+    "    # pi = pot.sinkhorn(a, b, M.detach().cpu().numpy(), reg=0.01)\n",
+    "    pi = pot.emd(a, b, M.detach().cpu().numpy(), 0.01)\n",
+    "    # Sample random interpolations on pi\n",
+    "    p = pi.flatten()\n",
+    "    p = p / p.sum()\n",
+    "    choices = np.random.choice(pi.shape[0] * pi.shape[1], p=p, size=batch_size)\n",
+    "    i, j = np.divmod(choices, pi.shape[1])\n",
     "    \n",
-    "    x0s = torch.cat(x0s)\n",
-    "    x1s = torch.cat(x1s)\n",
+    "    mu_t = x0[i] * (1 - t) + x1[j] * t\n",
+    "    sigma_t = sigma_min\n",
+    "    x = mu_t + sigma_t * normal_sample(batch_size, dim).float()\n",
+    "    ut = x1[j] - x0[i]\n",
     "\n",
-    "    perm = torch.randperm(x0s.size()[0])\n",
-    "    x0s = x0s[perm]\n",
-    "    x1s = x1s[perm]\n",
-    "    for i in range(k):\n",
-    "        yield x0s[i * batch_size:(i + 1) * batch_size], x1s[i * batch_size:(i + 1) * batch_size]\n",
-    "    \n",
-    "num_collate = 5\n",
-    "start = time.time()\n",
-    "for k in range(10_000 // num_collate):\n",
-    "    optimizer.zero_grad()\n",
-    "\n",
-    "    for x0, x1 in collate_and_permute(num_collate):\n",
-    "        t = torch.rand(batch_size, 1)\n",
-    "        \n",
-    "\n",
-    "        #x1[:, 0] = x1[:, 0] - 0\n",
-    "\n",
-    "        # sample some random times\n",
-    "        a, b = pot.unif(x0.size()[0]), pot.unif(x1.size()[0])\n",
-    "        M = torch.cdist(x0, x1) ** 2\n",
-    "        M = M / M.max()\n",
-    "        # pi = pot.sinkhorn(a, b, M.detach().cpu().numpy(), reg=0.01)\n",
-    "        pi = pot.emd(a, b, M.detach().cpu().numpy(), 0.01)\n",
-    "        # Sample random interpolations on pi\n",
-    "        p = pi.flatten()\n",
-    "        p = p / p.sum()\n",
-    "        choices = np.random.choice(pi.shape[0] * pi.shape[1], p=p, size=batch_size)\n",
-    "        i, j = np.divmod(choices, pi.shape[1])\n",
-    "        \n",
-    "        mu_t = x0[i] * (1 - t) + x1[j] * t\n",
-    "        sigma_t = sigma_min\n",
-    "        x = mu_t + sigma_t * normal_sample(batch_size, dim).float()\n",
-    "        ut = x1[j] - x0[i]\n",
-    "\n",
-    "        batch_rep = torch.nn.LeakyReLU()(model_r(x0).mean(axis=0)).repeat(batch_size, 1)\n",
-    "        vt = model_h(torch.cat([x, batch_rep, t], dim=-1))\n",
-    "        loss = torch.mean((vt - ut) ** 2)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "    batch_rep = torch.nn.LeakyReLU()(model_r(x0).mean(axis=0)).repeat(batch_size, 1)\n",
+    "    vt = model_h(torch.cat([x, batch_rep, t], dim=-1))\n",
+    "    loss = torch.mean((vt - ut) ** 2)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
     "    if k % 100 == 0:\n",
     "        end = time.time()\n",
     "        print(f\"{k}: loss {loss.item():0.3f} time {(end - start) / 100:0.2f}\")\n",
@@ -474,7 +489,7 @@
     "    target = generate_moons(n_source, noise=0.2)[0]\n",
     "    mu = normal_sample(1, dim)\n",
     "    source = source + mu\n",
-    "    target = target + mu\n",
+    "    target = target * mu\n",
     "    wrapper.rep = torch.nn.LeakyReLU()(model_r(source).mean(axis=0)).repeat(n_source, 1)\n",
     "    full_traj = (\n",
     "        node_h.trajectory(\n",
