--- a/sbmodels/flow_shift.ipynb
+++ b/sbmodels/flow_shift.ipynb
@@ -329,18 +329,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: loss 6.576 time 0.00\n",
-      "100: loss 1.298 time 0.08\n",
-      "200: loss 1.673 time 0.08\n",
-      "300: loss 0.627 time 0.08\n",
-      "400: loss 2.157 time 0.08\n"
+      "0: loss 8.958 time 0.00\n",
+      "100: loss 1.951 time 0.02\n",
+      "200: loss 1.719 time 0.02\n",
+      "300: loss 2.928 time 0.02\n",
+      "400: loss 1.123 time 0.02\n",
+      "500: loss 0.582 time 0.02\n",
+      "600: loss 1.176 time 0.02\n",
+      "700: loss 0.467 time 0.02\n",
+      "800: loss 1.096 time 0.02\n",
+      "900: loss 0.197 time 0.02\n",
+      "1000: loss 0.479 time 0.02\n",
+      "1100: loss 0.330 time 0.02\n",
+      "1200: loss 1.661 time 0.02\n",
+      "1300: loss 0.882 time 0.02\n",
+      "1400: loss 0.221 time 0.02\n",
+      "1500: loss 0.125 time 0.02\n",
+      "1600: loss 0.382 time 0.02\n",
+      "1700: loss 0.464 time 0.02\n",
+      "1800: loss 0.664 time 0.02\n",
+      "1900: loss 0.979 time 0.02\n",
+      "2000: loss 0.352 time 0.02\n",
+      "2100: loss 0.127 time 0.02\n",
+      "2200: loss 0.242 time 0.02\n",
+      "2300: loss 0.302 time 0.02\n",
+      "2400: loss 0.468 time 0.02\n",
+      "2500: loss 0.278 time 0.02\n",
+      "2600: loss 0.604 time 0.02\n",
+      "2700: loss 0.124 time 0.02\n",
+      "2800: loss 0.118 time 0.02\n",
+      "2900: loss 0.165 time 0.02\n",
+      "3000: loss 0.162 time 0.02\n",
+      "3100: loss 0.674 time 0.02\n",
+      "3200: loss 2.359 time 0.02\n",
+      "3300: loss 0.301 time 0.02\n",
+      "3400: loss 0.174 time 0.02\n",
+      "3500: loss 0.272 time 0.02\n",
+      "3600: loss 0.364 time 0.02\n",
+      "3700: loss 0.125 time 0.02\n",
+      "3800: loss 0.206 time 0.02\n",
+      "3900: loss 0.307 time 0.02\n",
+      "4000: loss 0.348 time 0.02\n",
+      "4100: loss 0.149 time 0.02\n",
+      "4200: loss 0.205 time 0.02\n",
+      "4300: loss 0.229 time 0.02\n",
+      "4400: loss 0.107 time 0.02\n",
+      "4500: loss 0.112 time 0.02\n",
+      "4600: loss 0.596 time 0.02\n",
+      "4700: loss 0.152 time 0.02\n",
+      "4800: loss 0.273 time 0.02\n",
+      "4900: loss 0.164 time 0.02\n",
+      "5000: loss 0.114 time 0.02\n",
+      "5100: loss 0.236 time 0.02\n",
+      "5200: loss 0.117 time 0.02\n",
+      "5300: loss 0.241 time 0.02\n",
+      "5400: loss 0.172 time 0.02\n",
+      "5500: loss 0.316 time 0.02\n",
+      "5600: loss 0.144 time 0.02\n",
+      "5700: loss 0.236 time 0.02\n",
+      "5800: loss 0.220 time 0.02\n",
+      "5900: loss 0.287 time 0.02\n",
+      "6000: loss 0.119 time 0.02\n",
+      "6100: loss 0.150 time 0.02\n",
+      "6200: loss 0.115 time 0.02\n",
+      "6300: loss 0.577 time 0.02\n",
+      "6400: loss 0.371 time 0.02\n",
+      "6500: loss 0.284 time 0.02\n",
+      "6600: loss 0.302 time 0.02\n",
+      "6700: loss 0.122 time 0.02\n",
+      "6800: loss 0.435 time 0.02\n",
+      "6900: loss 0.142 time 0.02\n",
+      "7000: loss 0.127 time 0.02\n",
+      "7100: loss 0.160 time 0.02\n",
+      "7200: loss 0.414 time 0.02\n",
+      "7300: loss 0.127 time 0.02\n",
+      "7400: loss 0.135 time 0.02\n",
+      "7500: loss 0.748 time 0.02\n",
+      "7600: loss 0.164 time 0.02\n",
+      "7700: loss 0.397 time 0.02\n",
+      "7800: loss 0.354 time 0.02\n",
+      "7900: loss 0.273 time 0.02\n",
+      "8000: loss 0.163 time 0.02\n",
+      "8100: loss 0.324 time 0.02\n",
+      "8200: loss 0.177 time 0.02\n",
+      "8300: loss 0.251 time 0.02\n",
+      "8400: loss 0.459 time 0.02\n",
+      "8500: loss 0.143 time 0.02\n",
+      "8600: loss 0.135 time 0.02\n",
+      "8700: loss 0.236 time 0.02\n",
+      "8800: loss 0.143 time 0.02\n",
+      "8900: loss 0.530 time 0.02\n",
+      "9000: loss 0.517 time 0.02\n",
+      "9100: loss 0.502 time 0.02\n",
+      "9200: loss 0.401 time 0.02\n",
+      "9300: loss 0.271 time 0.02\n",
+      "9400: loss 0.096 time 0.02\n",
+      "9500: loss 0.084 time 0.02\n",
+      "9600: loss 0.178 time 0.02\n",
+      "9700: loss 0.193 time 0.02\n",
+      "9800: loss 0.086 time 0.02\n",
+      "9900: loss 0.220 time 0.02\n"
      ]
     }
    ],
@@ -363,63 +458,44 @@
     "# Use the combined parameters in the Adam optimizer\n",
     "optimizer = torch.optim.Adam(combined_parameters, lr=1e-3)\n",
     "\n",
-    "def get_batch():\n",
-    "    x0 = eight_normal_sample(batch_size, dim, scale=5, var=0.1).float()\n",
-    "    x1, _ = generate_moons(batch_size, noise=0.2)\n",
+    "def get_batch(n=batch_size):\n",
+    "    x0 = eight_normal_sample(n, dim, scale=5, var=0.1).float()\n",
+    "    x1, _ = generate_moons(n, noise=0.2)\n",
     "    mu = normal_sample(1, dim)\n",
     "    x0 += mu\n",
     "    x1 += mu\n",
     "    return x0, x1\n",
     "\n",
-    "def collate_and_permute(k=4):\n",
-    "    x0s, x1s = [], []\n",
-    "    for _ in range(k):\n",
-    "        x0, x1 = get_batch()\n",
-    "        x0s.append(x0)\n",
-    "        x1s.append(x1)\n",
-    "    \n",
-    "    x0s = torch.cat(x0s)\n",
-    "    x1s = torch.cat(x1s)\n",
-    "\n",
-    "    perm = torch.randperm(x0s.size()[0])\n",
-    "    x0s = x0s[perm]\n",
-    "    x1s = x1s[perm]\n",
-    "    for i in range(k):\n",
-    "        yield x0s[i * batch_size:(i + 1) * batch_size], x1s[i * batch_size:(i + 1) * batch_size]\n",
-    "    \n",
-    "num_collate = 5\n",
     "start = time.time()\n",
-    "for k in range(10_000 // num_collate):\n",
+    "for k in range(10_000):\n",
     "    optimizer.zero_grad()\n",
+    "    t = torch.rand(batch_size, 1)\n",
+    "    x0, x1 = get_batch()\n",
     "\n",
-    "    for x0, x1 in collate_and_permute(num_collate):\n",
-    "        t = torch.rand(batch_size, 1)\n",
-    "        \n",
+    "    #x1[:, 0] = x1[:, 0] - 0\n",
     "\n",
-    "        #x1[:, 0] = x1[:, 0] - 0\n",
+    "    # sample some random times\n",
+    "    a, b = pot.unif(x0.size()[0]), pot.unif(x1.size()[0])\n",
+    "    M = torch.cdist(x0, x1) ** 2\n",
+    "    M = M / M.max()\n",
+    "    # pi = pot.sinkhorn(a, b, M.detach().cpu().numpy(), reg=0.01)\n",
+    "    pi = pot.emd(a, b, M.detach().cpu().numpy(), 0.01)\n",
+    "    # Sample random interpolations on pi\n",
+    "    p = pi.flatten()\n",
+    "    p = p / p.sum()\n",
+    "    choices = np.random.choice(pi.shape[0] * pi.shape[1], p=p, size=batch_size)\n",
+    "    i, j = np.divmod(choices, pi.shape[1])\n",
+    "    \n",
+    "    mu_t = x0[i] * (1 - t) + x1[j] * t\n",
+    "    sigma_t = sigma_min\n",
+    "    x = mu_t + sigma_t * normal_sample(batch_size, dim).float()\n",
+    "    ut = x1[j] - x0[i]\n",
     "\n",
-    "        # sample some random times\n",
-    "        a, b = pot.unif(x0.size()[0]), pot.unif(x1.size()[0])\n",
-    "        M = torch.cdist(x0, x1) ** 2\n",
-    "        M = M / M.max()\n",
-    "        # pi = pot.sinkhorn(a, b, M.detach().cpu().numpy(), reg=0.01)\n",
-    "        pi = pot.emd(a, b, M.detach().cpu().numpy(), 0.01)\n",
-    "        # Sample random interpolations on pi\n",
-    "        p = pi.flatten()\n",
-    "        p = p / p.sum()\n",
-    "        choices = np.random.choice(pi.shape[0] * pi.shape[1], p=p, size=batch_size)\n",
-    "        i, j = np.divmod(choices, pi.shape[1])\n",
-    "        \n",
-    "        mu_t = x0[i] * (1 - t) + x1[j] * t\n",
-    "        sigma_t = sigma_min\n",
-    "        x = mu_t + sigma_t * normal_sample(batch_size, dim).float()\n",
-    "        ut = x1[j] - x0[i]\n",
-    "\n",
-    "        batch_rep = torch.nn.LeakyReLU()(model_r(x0).mean(axis=0)).repeat(batch_size, 1)\n",
-    "        vt = model_h(torch.cat([x, batch_rep, t], dim=-1))\n",
-    "        loss = torch.mean((vt - ut) ** 2)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "    batch_rep = torch.nn.LeakyReLU()(model_r(x0).mean(axis=0)).repeat(batch_size, 1)\n",
+    "    vt = model_h(torch.cat([x, batch_rep, t], dim=-1))\n",
+    "    loss = torch.mean((vt - ut) ** 2)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
     "    if k % 100 == 0:\n",
     "        end = time.time()\n",
     "        print(f\"{k}: loss {loss.item():0.3f} time {(end - start) / 100:0.2f}\")\n",
@@ -470,11 +546,7 @@
     "# get figure for three different means\n",
     "fig, axs = plt.subplots(2, num_means, figsize=(6 * num_means, 6 * 2), sharex=True, sharey=True)\n",
     "for i in range(num_means):\n",
-    "    source = eight_normal_sample(n_source, dim, scale=5, var=0.1).float()\n",
-    "    target = generate_moons(n_source, noise=0.2)[0]\n",
-    "    mu = normal_sample(1, dim)\n",
-    "    source = source + mu\n",
-    "    target = target + mu\n",
+    "    source, target = get_batch(n=n_source)\n",
     "    wrapper.rep = torch.nn.LeakyReLU()(model_r(source).mean(axis=0)).repeat(n_source, 1)\n",
     "    full_traj = (\n",
     "        node_h.trajectory(\n",
