--- a/omnicell/notebooks/VAE-Everything.ipynb
+++ b/omnicell/notebooks/VAE-Everything.ipynb
@@ -10,6 +10,7 @@
     "import torch\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
     "import torch.nn.functional as F\n",
     "import numpy as np\n",
     "\n",
@@ -17,8 +18,14 @@
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm   "
+    "from tqdm import tqdm   \n",
+    "import torchcfm"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -380,6 +387,7 @@
     "        # implementation below.\n",
     "        # Somewhat related: see NOTE [ Lack of Default `__len__` in Python Abstract Base Classes ]\n",
     "        return np.sum(self.ns) // self.batch_size\n",
+    "\n",
     "\n",
     "from torchcfm.conditional_flow_matching import (\n",
     "    ExactOptimalTransportConditionalFlowMatcher,OTPlanSampler\n",
@@ -17017,7 +17025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
